log
Tue 05 Sep 2023 02:11:42 AM UTC: 
 tests:  0|6
total_score: 0/70
e374038
Tue 05 Sep 2023 02:31:41 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9f1b4af
Tue 05 Sep 2023 02:31:53 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:65:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   65 |   map->currentIndex = -1
      |      ^~
hashmap.c:65:25: error: expected ‘;’ before ‘return’
   65 |   map->currentIndex = -1
      |                         ^
      |                         ;
   66 |   return map;
      |   ~~~~~~                 
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
257b2ec
Tue 05 Sep 2023 02:32:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:65:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   65 |   map->currentIndex = -1;
      |      ^~
Compilation failed
f1984de
Tue 05 Sep 2023 02:34:21 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:57:17: error: ‘Cube’ undeclared (first use in this function)
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:57:22: error: expected expression before ‘)’ token
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:58:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   58 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:62:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   62 |   map->currentIndex = -1;
      |      ^~
Compilation failed
50903cf
Tue 05 Sep 2023 02:34:32 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:65:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   65 |   map->currentIndex = -1;
      |      ^~
Compilation failed
2406c36
Tue 05 Sep 2023 02:37:20 AM UTC: 
 hashmap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
e53ebf4
Tue 05 Sep 2023 02:46:40 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
c827bc3
Tue 05 Sep 2023 02:47:00 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f99cb67
Tue 05 Sep 2023 02:47:34 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|4
total_score: 30/70
3871fcf
Tue 05 Sep 2023 02:48:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:21: error: comparison between pointer and integer [-Werror]
   43 |   for(long i = 0; i < map; i++){
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
3c6bcb2
Tue 05 Sep 2023 02:48:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c5b8b56
Tue 05 Sep 2023 02:51:38 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
e9f7bd4
Tue 05 Sep 2023 02:56:49 AM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:22: error: comparison between pointer and integer [-Werror]
   88 |   for (long i = 0; i < map->buckets; i++) {
      |                      ^
hashmap.c:91:5: error: expected ‘,’ or ‘;’ before ‘if’
   91 |     if (currentPair == NULL){
      |     ^~
hashmap.c:96:25: error: expected ‘;’ before ‘}’ token
   96 |       return currentPair
      |                         ^
      |                         ;
   97 |     }
      |     ~                    
hashmap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b91d8ee
Tue 05 Sep 2023 02:57:01 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:22: error: comparison between pointer and integer [-Werror]
   88 |   for (long i = 0; i < map->buckets; i++) {
      |                      ^
hashmap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
daa6b0e
Tue 05 Sep 2023 02:57:32 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:5: error: unknown type name ‘lon’; did you mean ‘long’?
   89 |     lon index = (hash(key, map->capacity) + i) % map->capacity;
      |     ^~~
      |     long
hashmap.c:99:1: error: control reaches end of non-void function [-Werror=return-type]
   99 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a4483dc
Tue 05 Sep 2023 02:57:50 AM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:28: error: ‘struct Pair’ has no member named ‘ke’; did you mean ‘key’?
   91 |     if(strcmp(currentPair->ke, key) == 0){
      |                            ^~
      |                            key
hashmap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a110e1
